log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: log-volume
          persistentVolumeClaim:
            claimName: image-claim
        - name: config-volume
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: log-output
          image: log-output:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: log-volume
              mountPath: /app/logs
            - name: config-volume
              mountPath: /app/config
              readOnly: true
        - name: log-output-generator
          image: log-output-generator:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: log-volume
              mountPath: /app/logs
