log_output/manifests/pingpong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
      - name: ping-pong
        image: ping-pong:latest
        imagePullPolicy: Never
