log_output/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
