log_output/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-postgres-svc
  namespace: exercises
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: pingpong-postgres
