log_output/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: log-output-route
  namespace: exercises
spec:
  parentRefs:
    - name: log-output-gateway
  rules:
    - matches: 
      - path:
          type: PathPrefix
          value: /pingpong
      backendRefs:
        - name: ping-pong-svc
          port: 3000
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: log-output-svc
          port: 3000
